--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <!-- INTRO -->
       <section id="intro">
-        <h2>1. Introducción</h2>
+        <h2>Introducción</h2>
         <p>
           En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, 
           tecnología y sociedad. El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los 
@@ -48,7 +48,7 @@
 
       <!-- CONTEXTO -->
       <section id="contexto">
-        <h2>2. Contexto Científico y Tecnológico</h2>
+        <h2>Contexto científico y tecnológico</h2>
         <p>
           La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
           Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
@@ -58,7 +58,7 @@
 
       <!-- IMPACTO -->
       <section id="impacto">
-        <h2>3. Impacto Social y Ético</h2>
+        <h2>Impacto social y ético</h2>
         <p>
           La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. Se genera una sensación de 
           observación permanente que afecta la libertad de expresión y la intimidad individual. Desde el punto de vista ético, se 
@@ -68,11 +68,11 @@
 
       <!-- CTS -->
       <section id="cts">
-        <h2>4. Análisis desde la Perspectiva CTS</h2>
+        <h2>Análisis desde la perspectiva CTS</h2>
         <p>
           Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
-          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. La tecnología, lejos de 
-          ser neutral, refleja las estructuras de poder que la crean y la utilizan.
+          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
+          La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
         </p>
       </section>
     </div>
@@ -82,7 +82,7 @@
       
       <!-- FAQ -->
       <section id="faq">
-        <h2>Preguntas Frecuentes</h2>
+        <h2>Preguntas frecuentes</h2>
         <div class="faq-container">
 
           <div class="faq-item">
@@ -93,14 +93,14 @@
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Por qué se considera un problema ético?</button>
+            <button class="faq-question">¿Por qué es un problema ético?</button>
             <div class="faq-answer">
               <p>Porque afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control o la exposición pública.</p>
             </div>
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Qué papel cumple la inteligencia artificial?</button>
+            <button class="faq-question">¿Qué rol cumple la inteligencia artificial?</button>
             <div class="faq-answer">
               <p>Permite analizar datos y predecir comportamientos, facilitando la vigilancia automatizada y el control social.</p>
             </div>
@@ -109,7 +109,7 @@
           <div class="faq-item">
             <button class="faq-question">¿Cómo puedo proteger mis datos?</button>
             <div class="faq-answer">
-              <p>Usá contraseñas seguras, configurá la privacidad de tus redes, evitá compartir información sensible y usá autenticación de dos pasos.</p>
+              <p>Usá contraseñas seguras, configurá la privacidad, evitá compartir información sensible y activá la verificación en dos pasos.</p>
             </div>
           </div>
 
@@ -118,7 +118,7 @@
 
       <!-- CASOS -->
       <section id="casos">
-        <h2>Casos Reales de Vigilancia Masiva</h2>
+        <h2>Casos reales</h2>
         <div class="casos-container">
 
           <article class="caso">
@@ -126,7 +126,7 @@
                  alt="Edward Snowden" />
             <div>
               <h3>Edward Snowden (2013)</h3>
-              <p>Reveló el espionaje global de la NSA, mostrando cómo los estados usan la tecnología para vigilar ciudadanos.</p>
+              <p>Reveló el espionaje global de la NSA, exponiendo cómo los gobiernos analizan información en masa.</p>
             </div>
           </article>
 
@@ -135,7 +135,7 @@
                  alt="Cambridge Analytica" />
             <div>
               <h3>Cambridge Analytica (2018)</h3>
-              <p>Utilizó datos de millones de usuarios de Facebook para manipular campañas políticas y electorales.</p>
+              <p>Manipulación electoral mediante el uso indebido de datos de millones de usuarios de Facebook.</p>
             </div>
           </article>
 
@@ -144,7 +144,7 @@
                  alt="Crédito Social China" />
             <div>
               <h3>Crédito Social en China</h3>
-              <p>Sistema que evalúa y controla conductas ciudadanas mediante vigilancia basada en IA.</p>
+              <p>Un sistema que puntúa a los ciudadanos según su comportamiento, usando vigilancia e inteligencia artificial.</p>
             </div>
           </article>
 
@@ -154,48 +154,43 @@
     </aside>
   </main>
 
-  <!-- CARRUSEL DE LIBROS -->
+  <!-- LIBROS -->
   <section id="libros">
-    <h2>Libros vinculados a la temática</h2>
+    <h2>Libros recomendados</h2>
 
     <div class="carousel">
 
       <div class="book-card">
-        <h3>Nick Bostrom – Superinteligencia</h3>
-        <p><strong>Aporte:</strong> Analiza riesgos de IA avanzada.</p>
-        <p><strong>Relevancia:</strong> Contexto científico.</p>
+        <h3>Superinteligencia — Nick Bostrom</h3>
+        <p>Analiza los riesgos de una IA avanzada en el control social.</p>
       </div>
 
       <div class="book-card">
-        <h3>Javier Echeverría – La revolución tecnocientífica</h3>
-        <p><strong>Aporte:</strong> Explica cómo la tecnociencia transforma la sociedad.</p>
-        <p><strong>Relevancia:</strong> Análisis CTS.</p>
+        <h3>La revolución tecnocientífica — Javier Echeverría</h3>
+        <p>Explica cómo la tecnociencia redefine las relaciones de poder.</p>
       </div>
 
       <div class="book-card">
-        <h3>Nicholas Carr – Atrapados</h3>
-        <p><strong>Aporte:</strong> Estudia la hiperconectividad y el comportamiento.</p>
-        <p><strong>Relevancia:</strong> Impacto social.</p>
+        <h3>Atrapados — Nicholas Carr</h3>
+        <p>Estudia cómo la hiperconectividad moldea nuestra subjetividad.</p>
       </div>
 
       <div class="book-card">
-        <h3>Nassim Nicholas Taleb – El cisne negro</h3>
-        <p><strong>Aporte:</strong> Analiza imprevisibilidad de sistemas complejos.</p>
-        <p><strong>Relevancia:</strong> Innovación.</p>
+        <h3>El cisne negro — N. N. Taleb</h3>
+        <p>Analiza la imprevisibilidad en sistemas complejos.</p>
       </div>
 
       <div class="book-card">
-        <h3>Edward O. Wilson – El sentido de la existencia humana</h3>
-        <p><strong>Aporte:</strong> Une ciencia y ética.</p>
-        <p><strong>Relevancia:</strong> Conclusiones.</p>
+        <h3>El sentido de la existencia humana — E. O. Wilson</h3>
+        <p>Integra ética y ciencia para pensar el futuro humano.</p>
       </div>
 
     </div>
   </section>
 
-  <!-- TEST + ESTADÍSTICAS -->
+  <!-- TEST + ESTADISTICAS -->
   <section id="test">
-    <h2>5. ¿Qué tan vigilado estás?</h2>
+    <h2>¿Qué tan vigilado estás?</h2>
 
     <div class="test-y-stats">
 
@@ -204,74 +199,75 @@
         <p>1. ¿Usás contraseñas diferentes en cada red social?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>2. ¿Leés los permisos antes de instalar una aplicación?</p>
+        <p>2. ¿Leés los permisos antes de instalar una app?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>3. ¿Usás verificación en dos pasos (2FA)?</p>
+        <p>3. ¿Usás verificación en dos pasos?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>4. ¿Usás buscadores o navegadores que prioricen tu privacidad?</p>
+        <p>4. ¿Elegís navegadores que prioricen tu privacidad?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>5. ¿Limitás la ubicación y acceso a tus fotos en el celular?</p>
+        <p>5. ¿Limitás la ubicación y acceso a fotos?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>6. ¿Desactivás las cookies de seguimiento cuando navegás?</p>
+        <p>6. ¿Desactivás cookies de seguimiento?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
         <div id="result"></div>
       </div>
 
-      <!-- ESTADÍSTICAS -->
+      <!-- ESTADISTICAS -->
       <div id="estadisticas" class="stats-col">
-        <h3>📊 Resultados de la clase</h3>
+        <h3>Resultados de la clase</h3>
 
         <div class="stats-container">
 
           <div class="stat-item">
-            <p><strong>Pregunta 1</strong> — Sí 60% / No 40%</p>
-            <div class="bar yes" style="--target-width:60%"></div>
+            <p>Pregunta 1 — Sí 60%</p>
+            <div class="bar" style="--target-width:60%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 2</strong> — Sí 14% / No 86%</p>
-            <div class="bar yes" style="--target-width:14%"></div>
+            <p>Pregunta 2 — Sí 14%</p>
+            <div class="bar" style="--target-width:14%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 3</strong> — Sí 71% / No 29%</p>
-            <div class="bar yes" style="--target-width:71%"></div>
+            <p>Pregunta 3 — Sí 71%</p>
+            <div class="bar" style="--target-width:71%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 4</strong> — Sí 21% / No 79%</p>
-            <div class="bar yes" style="--target-width:21%"></div>
+            <p>Pregunta 4 — Sí 21%</p>
+            <div class="bar" style="--target-width:21%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 5</strong> — Sí 46% / No 54%</p>
-            <div class="bar yes" style="--target-width:46%"></div>
+            <p>Pregunta 5 — Sí 46%</p>
+            <div class="bar" style="--target-width:46%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 6</strong> — Sí 7% / No 93%</p>
-            <div class="bar yes" style="--target-width:7%"></div>
+            <p>Pregunta 6 — Sí 7%</p>
+            <div class="bar" style="--target-width:7%"></div>
           </div>
+
         </div>
 
         <p class="stats-conclusion">
-          📌 <strong>Conclusión:</strong> La mayoría de la clase mantiene hábitos básicos de privacidad, 
-          pero el uso de prácticas avanzadas como leer permisos (14%) o desactivar cookies (7%) es muy bajo.  
-          Esto indica confianza alta en plataformas, pero también una exposición significativa.
+          La clase muestra hábitos básicos de protección, pero las prácticas avanzadas siguen siendo muy bajas.
+          Esto implica una exposición digital considerable incluso cuando se tiene cierta precaución.
         </p>
 
       </div>
+
     </div>
   </section>
 
-  <!-- Bibliografía -->
+  <!-- BIBLIOGRAFÍA -->
   <section id="refs">
-    <h2>6. Bibliografía</h2>
+    <h2>Bibliografía</h2>
 
     <ul>
       <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
@@ -284,27 +280,27 @@
         <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
       </li>
 
-      <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
+      <li><em>Investigación sobre vigilancia en Argentina</em>. 
         <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
       </li>
 
       <li>
-        📺 <em>Video recomendado:</em>
+        📺 <em>Video introductorio:</em>
         <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
-          ¿Qué es la vigilancia masiva? — Explicación clara
+          ¿Qué es la vigilancia masiva?
         </a>
       </li>
 
       <li>
         <a href="https://safety.google/intl/es_ALL/safety/" target="_blank">
-          Google Safety: Herramientas de privacidad y seguridad
+          Google Safety (Privacidad y Seguridad)
         </a>
       </li>
 
       <li>
         <a href="https://telefonicatech.com/blog/privacidad-y-seguridad-en-internet-en-que-se-diferencian-y-su-impacto-en-tu-reputacion-online"
            target="_blank">
-          Privacidad y seguridad en internet — Telefónica Tech
+          Privacidad vs Seguridad — Telefónica Tech
         </a>
       </li>
     </ul>
@@ -312,9 +308,9 @@
 
   <!-- CONTACTO -->
   <section id="contacto">
-    <h2>7. Contacto</h2>
+    <h2>Contacto</h2>
 
-    <p>Si tenés dudas o querés dejar un comentario, podés hacerlo acá:</p>
+    <p>Si tenés dudas o querés dejar un comentario, completá este formulario:</p>
 
     <form class="contact-form">
       <label>Nombre</label>
@@ -324,7 +320,7 @@
       <input type="email" placeholder="tuemail@gmail.com" required>
 
       <label>Mensaje</label>
-      <textarea rows="5" placeholder="Escribí tu consulta acá..." required></textarea>
+      <textarea rows="5" placeholder="Escribí tu consulta..." required></textarea>
 
       <button type="submit">Enviar mensaje</button>
     </form>
