--- a/index.html
+++ b/index.html
@@ -35,147 +35,167 @@
     <!-- Columna principal -->
     <div class="main-column">
 
+      <!-- INTRO -->
       <section id="intro">
-        <h2>Introducción</h2>
+        <h2>1. Introducción</h2>
         <p>
           En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, 
           tecnología y sociedad. El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los 
-          dispositivos inteligentes han generado nuevas formas de vigilancia, muchas veces invisibles.
+          dispositivos inteligentes han generado nuevas formas de vigilancia, muchas veces invisibles, que ponen en tensión los 
+          límites entre seguridad, libertad y control.
         </p>
       </section>
 
+      <!-- CONTEXTO -->
       <section id="contexto">
-        <h2>Contexto científico y tecnológico</h2>
+        <h2>2. Contexto Científico y Tecnológico</h2>
         <p>
           La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
-          Estas tecnologías permiten recolectar y analizar grandes volúmenes de datos personales en tiempo real.
+          Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
+          Organismos estatales y corporaciones privadas utilizan esta información para fines de seguridad, marketing o control social.
         </p>
       </section>
 
+      <!-- IMPACTO -->
       <section id="impacto">
-        <h2>Impacto social y ético</h2>
+        <h2>3. Impacto Social y Ético</h2>
         <p>
           La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. Se genera una sensación de 
-          observación permanente que afecta la libertad de expresión y la intimidad individual.
+          observación permanente que afecta la libertad de expresión y la intimidad individual. Desde el punto de vista ético, se 
+          discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
         </p>
       </section>
 
+      <!-- CTS -->
       <section id="cts">
-        <h2>Análisis CTS</h2>
+        <h2>4. Análisis desde la Perspectiva CTS</h2>
         <p>
-          Desde Ciencia, Tecnología y Sociedad, la vigilancia masiva se interpreta como un entramado sociotécnico donde intervienen 
-          intereses políticos, económicos y culturales. La tecnología refleja las estructuras de poder que la usan.
+          Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
+          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. La tecnología, lejos de 
+          ser neutral, refleja las estructuras de poder que la crean y la utilizan.
         </p>
       </section>
     </div>
 
-    <!-- Lateral -->
+    <!-- Columna lateral -->
     <aside class="side-column">
-
+      
+      <!-- FAQ -->
       <section id="faq">
-        <h2>Preguntas frecuentes</h2>
+        <h2>Preguntas Frecuentes</h2>
         <div class="faq-container">
 
           <div class="faq-item">
             <button class="faq-question">¿Qué es la vigilancia masiva?</button>
             <div class="faq-answer">
-              <p>Es la recolección sistemática de grandes volúmenes de datos personales por gobiernos o empresas.</p>
+              <p>Es la recolección sistemática de información personal a gran escala, realizada por gobiernos o empresas mediante tecnologías digitales.</p>
             </div>
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Por qué es un problema ético?</button>
+            <button class="faq-question">¿Por qué se considera un problema ético?</button>
             <div class="faq-answer">
-              <p>Afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control.</p>
+              <p>Porque afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control o la exposición pública.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <button class="faq-question">¿Qué papel cumple la inteligencia artificial?</button>
             <div class="faq-answer">
-              <p>Permite analizar datos y predecir comportamientos de forma automatizada, aumentando el poder de vigilancia.</p>
+              <p>Permite analizar datos y predecir comportamientos, facilitando la vigilancia automatizada y el control social.</p>
             </div>
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Cómo proteger mis datos?</button>
+            <button class="faq-question">¿Cómo puedo proteger mis datos?</button>
             <div class="faq-answer">
-              <p>Contraseñas seguras, 2FA, revisar permisos, usar navegadores privados y limitar accesos.</p>
+              <p>Usá contraseñas seguras, configurá la privacidad de tus redes, evitá compartir información sensible y usá autenticación de dos pasos.</p>
             </div>
           </div>
 
         </div>
       </section>
 
+      <!-- CASOS -->
       <section id="casos">
-        <h2>Casos reales</h2>
-
+        <h2>Casos Reales de Vigilancia Masiva</h2>
         <div class="casos-container">
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Edward_Snowden_%28cropped%29.jpg" alt="Snowden">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Edward_Snowden_%28cropped%29.jpg"
+                 alt="Edward Snowden" />
             <div>
-              <h3>Edward Snowden</h3>
-              <p>Reveló el espionaje global de la NSA en 2013, mostrando cómo se vigila a ciudadanos del mundo entero.</p>
+              <h3>Edward Snowden (2013)</h3>
+              <p>Reveló el espionaje global de la NSA, mostrando cómo los estados usan la tecnología para vigilar ciudadanos.</p>
             </div>
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Cambridge_Analytica_logo.png/640px-Cambridge_Analytica_logo.png" alt="Cambridge Analytica">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Cambridge_Analytica_logo.png"
+                 alt="Cambridge Analytica" />
             <div>
-              <h3>Cambridge Analytica</h3>
-              <p>Obtuvo datos de millones de usuarios y los usó para influir en elecciones y campañas políticas.</p>
+              <h3>Cambridge Analytica (2018)</h3>
+              <p>Utilizó datos de millones de usuarios de Facebook para manipular campañas políticas y electorales.</p>
             </div>
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Beijing_Skyline_2018.jpg/1280px-Beijing_Skyline_2018.jpg" alt="Crédito social China">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Beijing_Skyline_2018.jpg/1280px-Beijing_Skyline_2018.jpg"
+                 alt="Crédito Social China" />
             <div>
               <h3>Crédito Social en China</h3>
-              <p>Sistema que califica conductas ciudadanas mediante vigilancia digital e IA.</p>
+              <p>Sistema que evalúa y controla conductas ciudadanas mediante vigilancia basada en IA.</p>
             </div>
           </article>
 
         </div>
       </section>
+
     </aside>
   </main>
 
-  <!-- Libros -->
+  <!-- CARRUSEL DE LIBROS -->
   <section id="libros">
-    <h2>Libros recomendados</h2>
+    <h2>Libros vinculados a la temática</h2>
 
     <div class="carousel">
+
       <div class="book-card">
-        <h3>Superinteligencia — Bostrom</h3>
-        <p>Análisis de riesgos de IA avanzada.</p>
+        <h3>Nick Bostrom – Superinteligencia</h3>
+        <p><strong>Aporte:</strong> Analiza riesgos de IA avanzada.</p>
+        <p><strong>Relevancia:</strong> Contexto científico.</p>
       </div>
 
       <div class="book-card">
-        <h3>La revolución tecnocientífica — Echeverría</h3>
-        <p>Explica cómo la tecnociencia transforma la sociedad.</p>
+        <h3>Javier Echeverría – La revolución tecnocientífica</h3>
+        <p><strong>Aporte:</strong> Explica cómo la tecnociencia transforma la sociedad.</p>
+        <p><strong>Relevancia:</strong> Análisis CTS.</p>
       </div>
 
       <div class="book-card">
-        <h3>Atrapados — Nicholas Carr</h3>
-        <p>Hiperconectividad y comportamiento digital.</p>
+        <h3>Nicholas Carr – Atrapados</h3>
+        <p><strong>Aporte:</strong> Estudia la hiperconectividad y el comportamiento.</p>
+        <p><strong>Relevancia:</strong> Impacto social.</p>
       </div>
 
       <div class="book-card">
-        <h3>El cisne negro — Taleb</h3>
-        <p>Eventos impredecibles en sistemas complejos.</p>
+        <h3>Nassim Nicholas Taleb – El cisne negro</h3>
+        <p><strong>Aporte:</strong> Analiza imprevisibilidad de sistemas complejos.</p>
+        <p><strong>Relevancia:</strong> Innovación.</p>
       </div>
 
       <div class="book-card">
-        <h3>El sentido de la existencia humana — Wilson</h3>
-        <p>Relación entre ciencia y ética.</p>
+        <h3>Edward O. Wilson – El sentido de la existencia humana</h3>
+        <p><strong>Aporte:</strong> Une ciencia y ética.</p>
+        <p><strong>Relevancia:</strong> Conclusiones.</p>
       </div>
+
     </div>
   </section>
 
   <!-- TEST + ESTADÍSTICAS -->
   <section id="test">
-    <h2>¿Qué tan vigilado estás?</h2>
+    <h2>5. ¿Qué tan vigilado estás?</h2>
 
     <div class="test-y-stats">
 
@@ -190,13 +210,13 @@
         <p>3. ¿Usás verificación en dos pasos (2FA)?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>4. ¿Usás navegadores que prioricen la privacidad?</p>
+        <p>4. ¿Usás buscadores o navegadores que prioricen tu privacidad?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>5. ¿Limitás el acceso a fotos y ubicación?</p>
+        <p>5. ¿Limitás la ubicación y acceso a tus fotos en el celular?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>6. ¿Desactivás las cookies de seguimiento?</p>
+        <p>6. ¿Desactivás las cookies de seguimiento cuando navegás?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
         <div id="result"></div>
@@ -204,81 +224,107 @@
 
       <!-- ESTADÍSTICAS -->
       <div id="estadisticas" class="stats-col">
-        <h3>Resultados de la clase</h3>
+        <h3>📊 Resultados de la clase</h3>
 
         <div class="stats-container">
 
           <div class="stat-item">
-            <p>Pregunta 1 — Sí 60% / No 40%</p>
-            <div class="bar" style="--target-width:60%"></div>
+            <p><strong>Pregunta 1</strong> — Sí 60% / No 40%</p>
+            <div class="bar yes" style="--target-width:60%"></div>
           </div>
 
           <div class="stat-item">
-            <p>Pregunta 2 — Sí 14% / No 86%</p>
-            <div class="bar" style="--target-width:14%"></div>
+            <p><strong>Pregunta 2</strong> — Sí 14% / No 86%</p>
+            <div class="bar yes" style="--target-width:14%"></div>
           </div>
 
           <div class="stat-item">
-            <p>Pregunta 3 — Sí 71% / No 29%</p>
-            <div class="bar" style="--target-width:71%"></div>
+            <p><strong>Pregunta 3</strong> — Sí 71% / No 29%</p>
+            <div class="bar yes" style="--target-width:71%"></div>
           </div>
 
           <div class="stat-item">
-            <p>Pregunta 4 — Sí 21% / No 79%</p>
-            <div class="bar" style="--target-width:21%"></div>
+            <p><strong>Pregunta 4</strong> — Sí 21% / No 79%</p>
+            <div class="bar yes" style="--target-width:21%"></div>
           </div>
 
           <div class="stat-item">
-            <p>Pregunta 5 — Sí 46% / No 54%</p>
-            <div class="bar" style="--target-width:46%"></div>
+            <p><strong>Pregunta 5</strong> — Sí 46% / No 54%</p>
+            <div class="bar yes" style="--target-width:46%"></div>
           </div>
 
           <div class="stat-item">
-            <p>Pregunta 6 — Sí 7% / No 93%</p>
-            <div class="bar" style="--target-width:7%"></div>
+            <p><strong>Pregunta 6</strong> — Sí 7% / No 93%</p>
+            <div class="bar yes" style="--target-width:7%"></div>
           </div>
         </div>
 
         <p class="stats-conclusion">
-          La mayoría tiene hábitos básicos de seguridad, pero el uso de medidas avanzadas todavía es muy bajo.
+          📌 <strong>Conclusión:</strong> La mayoría de la clase mantiene hábitos básicos de privacidad, 
+          pero el uso de prácticas avanzadas como leer permisos (14%) o desactivar cookies (7%) es muy bajo.  
+          Esto indica confianza alta en plataformas, pero también una exposición significativa.
         </p>
+
       </div>
     </div>
   </section>
 
   <!-- Bibliografía -->
   <section id="refs">
-    <h2>Bibliografía</h2>
+    <h2>6. Bibliografía</h2>
 
     <ul>
-      <li>Zuboff — The Age of Surveillance Capitalism.</li>
-      <li>Han — La sociedad de la transparencia.</li>
-      <li>Vigilancia masiva y privacidad — UBA.</li>
+      <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
+      <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
+      <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. UBA. 
+        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a>
+      </li>
 
-      <li><a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">📺 Video: ¿Qué es la vigilancia masiva?</a></li>
+      <li><em>Mass Surveillance – Computer Science Topics</em>. 
+        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
+      </li>
 
-      <li><a href="https://safety.google/intl/es_ALL/safety/" target="_blank">Google Safety</a></li>
+      <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
+        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
+      </li>
 
-      <li><a href="https://telefonicatech.com/blog/privacidad-y-seguridad-en-internet-en-que-se-diferencian-y-su-impacto-en-tu-reputacion-online" target="_blank">
-        Privacidad y seguridad — Telefónica Tech</a></li>
+      <li>
+        📺 <em>Video recomendado:</em>
+        <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
+          ¿Qué es la vigilancia masiva? — Explicación clara
+        </a>
+      </li>
+
+      <li>
+        <a href="https://safety.google/intl/es_ALL/safety/" target="_blank">
+          Google Safety: Herramientas de privacidad y seguridad
+        </a>
+      </li>
+
+      <li>
+        <a href="https://telefonicatech.com/blog/privacidad-y-seguridad-en-internet-en-que-se-diferencian-y-su-impacto-en-tu-reputacion-online"
+           target="_blank">
+          Privacidad y seguridad en internet — Telefónica Tech
+        </a>
+      </li>
     </ul>
   </section>
 
   <!-- CONTACTO -->
   <section id="contacto">
-    <h2>Contacto</h2>
+    <h2>7. Contacto</h2>
 
-    <p>Si tenés dudas o querés dejar un comentario, escribinos:</p>
+    <p>Si tenés dudas o querés dejar un comentario, podés hacerlo acá:</p>
 
     <form class="contact-form">
       <label>Nombre</label>
-      <input type="text" required placeholder="Tu nombre">
+      <input type="text" placeholder="Tu nombre..." required>
 
       <label>Email</label>
-      <input type="email" required placeholder="tuemail@gmail.com">
+      <input type="email" placeholder="tuemail@gmail.com" required>
 
       <label>Mensaje</label>
-      <textarea rows="5" required placeholder="Escribí tu consulta"></textarea>
+      <textarea rows="5" placeholder="Escribí tu consulta acá..." required></textarea>
 
       <button type="submit">Enviar mensaje</button>
     </form>
