--- a/index.html
+++ b/index.html
@@ -35,20 +35,17 @@
     <!-- Columna principal -->
     <div class="main-column">
 
-      <!-- INTRO -->
       <section id="intro">
-        <h2>1. Introducción</h2>
+        <h2>Introducción</h2>
         <p>
           En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, 
           tecnología y sociedad. El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los 
-          dispositivos inteligentes han generado nuevas formas de vigilancia, muchas veces invisibles, que ponen en tensión los 
-          límites entre seguridad, libertad y control.
+          dispositivos inteligentes han generado nuevas formas de vigilancia, muchas veces invisibles.
         </p>
       </section>
 
-      <!-- CONTEXTO -->
       <section id="contexto">
-        <h2>2. Contexto Científico y Tecnológico</h2>
+        <h2>Contexto científico y tecnológico</h2>
         <p>
           La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
           Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
@@ -56,9 +53,8 @@
         </p>
       </section>
 
-      <!-- IMPACTO -->
       <section id="impacto">
-        <h2>3. Impacto Social y Ético</h2>
+        <h2>Impacto social y ético</h2>
         <p>
           La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. Se genera una sensación de 
           observación permanente que afecta la libertad de expresión y la intimidad individual. Desde el punto de vista ético, se 
@@ -66,136 +62,127 @@
         </p>
       </section>
 
-      <!-- CTS -->
       <section id="cts">
-        <h2>4. Análisis desde la Perspectiva CTS</h2>
+        <h2>Análisis CTS</h2>
         <p>
-          Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
-          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. La tecnología, lejos de 
-          ser neutral, refleja las estructuras de poder que la crean y la utilizan.
+          Desde Ciencia, Tecnología y Sociedad, la vigilancia masiva se interpreta como un entramado sociotécnico donde intervienen 
+          intereses políticos, económicos y culturales. La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
         </p>
       </section>
     </div>
 
-    <!-- Columna lateral -->
+    <!-- Lateral -->
     <aside class="side-column">
-      
-      <!-- FAQ -->
+
       <section id="faq">
-        <h2>Preguntas Frecuentes</h2>
+        <h2>Preguntas frecuentes</h2>
         <div class="faq-container">
 
           <div class="faq-item">
             <button class="faq-question">¿Qué es la vigilancia masiva?</button>
             <div class="faq-answer">
-              <p>Es la recolección sistemática de información personal a gran escala, realizada por gobiernos o empresas mediante tecnologías digitales.</p>
+              <p>Es la recolección sistemática de grandes volúmenes de datos personales por gobiernos o empresas.</p>
             </div>
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Por qué se considera un problema ético?</button>
+            <button class="faq-question">¿Por qué es un problema ético?</button>
             <div class="faq-answer">
-              <p>Porque afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control o la exposición pública.</p>
+              <p>Afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <button class="faq-question">¿Qué papel cumple la inteligencia artificial?</button>
             <div class="faq-answer">
-              <p>Permite analizar datos y predecir comportamientos, facilitando la vigilancia automatizada y el control social.</p>
+              <p>Permite analizar datos y predecir comportamientos de forma automatizada, aumentando el poder de vigilancia.</p>
             </div>
           </div>
 
           <div class="faq-item">
-            <button class="faq-question">¿Cómo puedo proteger mis datos?</button>
+            <button class="faq-question">¿Cómo proteger mis datos?</button>
             <div class="faq-answer">
-              <p>Usá contraseñas seguras, configurá la privacidad de tus redes, evitá compartir información sensible y usá autenticación de dos pasos.</p>
+              <p>Contraseñas seguras, 2FA, revisar permisos, usar navegadores privados y limitar accesos.</p>
             </div>
           </div>
 
         </div>
       </section>
 
-      <!-- CASOS -->
       <section id="casos">
-        <h2>Casos Reales de Vigilancia Masiva</h2>
+        <h2>Casos reales</h2>
+
         <div class="casos-container">
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Edward_Snowden_%28cropped%29.jpg"
-                 alt="Edward Snowden" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Edward_Snowden_%28cropped%29.jpg" alt="Snowden">
             <div>
-              <h3>Edward Snowden (2013)</h3>
-              <p>Reveló el espionaje global de la NSA, mostrando cómo los estados usan la tecnología para vigilar ciudadanos.</p>
+              <h3>Edward Snowden</h3>
+              <p>Reveló el espionaje global de la NSA en 2013, mostrando cómo se vigila a ciudadanos del mundo entero.</p>
             </div>
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Cambridge_Analytica_logo.png"
-                 alt="Cambridge Analytica" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Cambridge_Analytica_logo.png/640px-Cambridge_Analytica_logo.png" alt="Cambridge Analytica">
             <div>
-              <h3>Cambridge Analytica (2018)</h3>
-              <p>Utilizó datos de millones de usuarios de Facebook para manipular campañas políticas y electorales.</p>
+              <h3>Cambridge Analytica</h3>
+              <p>Obtuvo datos de millones de usuarios y los usó para influir en elecciones y campañas políticas.</p>
             </div>
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Beijing_Skyline_2018.jpg/1280px-Beijing_Skyline_2018.jpg"
-                 alt="Crédito Social China" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Beijing_Skyline_2018.jpg/1280px-Beijing_Skyline_2018.jpg" alt="Crédito social China">
             <div>
-              <h3>Crédito Social en China</h3>
-              <p>Sistema que evalúa y controla conductas ciudadanas mediante vigilancia basada en IA.</p>
+              <h3>Crédito social en China</h3>
+              <p>Sistema que califica conductas ciudadanas mediante vigilancia digital e IA.</p>
             </div>
           </article>
 
         </div>
       </section>
-
     </aside>
   </main>
 
-  <!-- CARRUSEL DE LIBROS -->
+  <!-- CARRUSEL DE LIBROS (ORIGINAL RESTAURADO) -->
   <section id="libros">
     <h2>Libros vinculados a la temática</h2>
-
     <div class="carousel">
-
       <div class="book-card">
-        <h3>Nick Bostrom – Superinteligencia</h3>
-        <p><strong>Aporte:</strong> Analiza riesgos de IA avanzada.</p>
-        <p><strong>Relevancia:</strong> Contexto científico.</p>
+        <h3> Nick Bostrom – Superinteligencia</h3>
+        <p><strong>Aporte:</strong> Analiza los riesgos del desarrollo de la IA, incluyendo la vigilancia y pérdida de autonomía humana.</p>
+        <p><strong>Relevancia:</strong> En el Contexto científico y tecnológico o Impacto ético.</p>
+        <blockquote>“Según Bostrom (2014), la inteligencia artificial avanzada puede convertirse en un sistema capaz de recolectar y analizar toda la información humana.”</blockquote>
       </div>
-
       <div class="book-card">
-        <h3>Javier Echeverría – La revolución tecnocientífica</h3>
-        <p><strong>Aporte:</strong> Explica cómo la tecnociencia transforma la sociedad.</p>
-        <p><strong>Relevancia:</strong> Análisis CTS.</p>
+        <h3> Javier Echeverría – La revolución tecnocientífica</h3>
+        <p><strong>Aporte:</strong> Explica cómo la tecnociencia redefine las relaciones sociales y de poder.</p>
+        <p><strong>Relevancia:</strong> Análisis desde la perspectiva CTS.</p>
+        <blockquote>“Echeverría (1999) sostiene que la tecnociencia crea nuevas formas de control y dependencia tecnológica.”</blockquote>
       </div>
-
       <div class="book-card">
-        <h3>Nicholas Carr – Atrapados</h3>
-        <p><strong>Aporte:</strong> Estudia la hiperconectividad y el comportamiento.</p>
-        <p><strong>Relevancia:</strong> Impacto social.</p>
+        <h3> Nicholas Carr – Atrapados</h3>
+        <p><strong>Aporte:</strong> Analiza cómo la hiperconectividad afecta la atención y la conducta.</p>
+        <p><strong>Relevancia:</strong> Impacto social y ético.</p>
+        <blockquote>“Carr (2011) advierte que la hiperconectividad genera una subjetividad moldeada por algoritmos.”</blockquote>
       </div>
-
       <div class="book-card">
-        <h3>Nassim Nicholas Taleb – El cisne negro</h3>
-        <p><strong>Aporte:</strong> Analiza imprevisibilidad de sistemas complejos.</p>
-        <p><strong>Relevancia:</strong> Innovación.</p>
+        <h3>🔍 Nassim Nicholas Taleb – El cisne negro</h3>
+        <p><strong>Aporte:</strong> Aborda la imprevisibilidad de sistemas complejos como el big data.</p>
+        <p><strong>Relevancia:</strong> Innovación del grupo.</p>
+        <blockquote>“Taleb (2007) sugiere que los sistemas basados en predicciones pueden amplificar eventos imprevistos.”</blockquote>
       </div>
-
       <div class="book-card">
-        <h3>Edward O. Wilson – El sentido de la existencia humana</h3>
-        <p><strong>Aporte:</strong> Une ciencia y ética.</p>
+        <h3>🔍 Edward O. Wilson – El sentido de la existencia humana</h3>
+        <p><strong>Aporte:</strong> Integra ciencia y ética para un futuro equilibrado.</p>
         <p><strong>Relevancia:</strong> Conclusiones.</p>
+        <blockquote>“Wilson plantea que la ciencia debe integrarse con la ética para garantizar un futuro sostenible.”</blockquote>
       </div>
-
     </div>
   </section>
 
   <!-- TEST + ESTADÍSTICAS -->
   <section id="test">
-    <h2>5. ¿Qué tan vigilado estás?</h2>
+    <h2>¿Qué tan vigilado estás?</h2>
 
     <div class="test-y-stats">
 
@@ -210,13 +197,13 @@
         <p>3. ¿Usás verificación en dos pasos (2FA)?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>4. ¿Usás buscadores o navegadores que prioricen tu privacidad?</p>
+        <p>4. ¿Usás navegadores que prioricen la privacidad?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>5. ¿Limitás la ubicación y acceso a tus fotos en el celular?</p>
+        <p>5. ¿Limitás el acceso a fotos y ubicación?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
-        <p>6. ¿Desactivás las cookies de seguimiento cuando navegás?</p>
+        <p>6. ¿Desactivás las cookies de seguimiento?</p>
         <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
 
         <div id="result"></div>
@@ -224,72 +211,59 @@
 
       <!-- ESTADÍSTICAS -->
       <div id="estadisticas" class="stats-col">
-        <h3>📊 Resultados de la clase</h3>
+        <h3>Resultados de la clase</h3>
 
         <div class="stats-container">
 
           <div class="stat-item">
-            <p><strong>Pregunta 1</strong> — Sí 60% / No 40%</p>
-            <div class="bar yes" style="--target-width:60%"></div>
+            <p>Pregunta 1 — Sí 60% / No 40%</p>
+            <div class="bar" style="--target-width:60%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 2</strong> — Sí 14% / No 86%</p>
-            <div class="bar yes" style="--target-width:14%"></div>
+            <p>Pregunta 2 — Sí 14% / No 86%</p>
+            <div class="bar" style="--target-width:14%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 3</strong> — Sí 71% / No 29%</p>
-            <div class="bar yes" style="--target-width:71%"></div>
+            <p>Pregunta 3 — Sí 71% / No 29%</p>
+            <div class="bar" style="--target-width:71%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 4</strong> — Sí 21% / No 79%</p>
-            <div class="bar yes" style="--target-width:21%"></div>
+            <p>Pregunta 4 — Sí 21% / No 79%</p>
+            <div class="bar" style="--target-width:21%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 5</strong> — Sí 46% / No 54%</p>
-            <div class="bar yes" style="--target-width:46%"></div>
+            <p>Pregunta 5 — Sí 46% / No 54%</p>
+            <div class="bar" style="--target-width:46%"></div>
           </div>
 
           <div class="stat-item">
-            <p><strong>Pregunta 6</strong> — Sí 7% / No 93%</p>
-            <div class="bar yes" style="--target-width:7%"></div>
+            <p>Pregunta 6 — Sí 7% / No 93%</p>
+            <div class="bar" style="--target-width:7%"></div>
           </div>
         </div>
 
         <p class="stats-conclusion">
-          📌 <strong>Conclusión:</strong> La mayoría de la clase mantiene hábitos básicos de privacidad, 
-          pero el uso de prácticas avanzadas como leer permisos (14%) o desactivar cookies (7%) es muy bajo.  
-          Esto indica confianza alta en plataformas, pero también una exposición significativa.
+          La mayoría tiene hábitos básicos de seguridad, pero el uso de medidas avanzadas todavía es muy bajo.
         </p>
-
       </div>
     </div>
   </section>
 
   <!-- Bibliografía -->
   <section id="refs">
-    <h2>6. Bibliografía</h2>
+    <h2>Bibliografía</h2>
 
     <ul>
       <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
       <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
-      <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. UBA. 
-        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a>
-      </li>
-
-      <li><em>Mass Surveillance – Computer Science Topics</em>. 
-        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
-      </li>
-
-      <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
-        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
-      </li>
+      <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. UBA.</li>
 
       <li>
-        📺 <em>Video recomendado:</em>
+        📺 <em>Video recomendado:</em> 
         <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
           ¿Qué es la vigilancia masiva? — Explicación clara
         </a>
@@ -312,19 +286,19 @@
 
   <!-- CONTACTO -->
   <section id="contacto">
-    <h2>7. Contacto</h2>
+    <h2>Contacto</h2>
 
-    <p>Si tenés dudas o querés dejar un comentario, podés hacerlo acá:</p>
+    <p>Si tenés dudas o querés dejar un comentario, escribinos:</p>
 
     <form class="contact-form">
       <label>Nombre</label>
-      <input type="text" placeholder="Tu nombre..." required>
+      <input type="text" required placeholder="Tu nombre">
 
       <label>Email</label>
-      <input type="email" placeholder="tuemail@gmail.com" required>
+      <input type="email" required placeholder="tuemail@gmail.com">
 
       <label>Mensaje</label>
-      <textarea rows="5" placeholder="Escribí tu consulta acá..." required></textarea>
+      <textarea rows="5" required placeholder="Escribí tu consulta"></textarea>
 
       <button type="submit">Enviar mensaje</button>
     </form>
