--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         <blockquote>“Carr (2011) advierte que la hiperconectividad genera una subjetividad moldeada por algoritmos.”</blockquote>
       </div>
       <div class="book-card">
-        <h3>🔍 Nassim Nicholas Taleb – El cisne negro</h3>
+        <h3> Nassim Nicholas Taleb – El cisne negro</h3>
         <p><strong>Aporte:</strong> Aborda la imprevisibilidad de sistemas complejos como el big data.</p>
         <p><strong>Relevancia:</strong> Innovación del grupo.</p>
         <blockquote>“Taleb (2007) sugiere que los sistemas basados en predicciones pueden amplificar eventos imprevistos.”</blockquote>
       </div>
       <div class="book-card">
-        <h3>🔍 Edward O. Wilson – El sentido de la existencia humana</h3>
+        <h3> Edward O. Wilson – El sentido de la existencia humana</h3>
         <p><strong>Aporte:</strong> Integra ciencia y ética para un futuro equilibrado.</p>
         <p><strong>Relevancia:</strong> Conclusiones.</p>
         <blockquote>“Wilson plantea que la ciencia debe integrarse con la ética para garantizar un futuro sostenible.”</blockquote>
@@ -263,9 +263,15 @@
       <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. UBA.</li>
 
       <li>
-        📺 <em>Video recomendado:</em> 
-        <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
-          ¿Qué es la vigilancia masiva? — Explicación clara
+         <em>Video recomendado:</em> 
+        <a href="https://www.youtube.com/watch?v=kFpF3Uv0H_k" target="_blank">
+          Los 7 sistemas de vigilancia masiva más impactantes en Internet
+        </a>
+      </li>
+     <li>
+         <em>Video recomendado:</em> 
+        <a href="https://www.youtube.com/watch?v=pP3xlYiwAhA" target="_blank">
+          La historia y evolución de la vigilancia masiva.
         </a>
       </li>
 
@@ -313,3 +319,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
